syntax = "proto3";
package cometbft.services.version.v1;

option go_package = "github.com/cometbft/cometbft/api/cometbft/services/version/v1";

import "cometbft/services/version/v1/version.proto";

// VersionService simply provides version information about the node and the
// protocols it uses.
//
// The intention with this service is to offer a stable interface through which
// clients can access version information. This means that the version of the
// service should be kept stable at v1, with GetVersionResponse evolving only
// in non-breaking ways.
service VersionService {
  // GetVersion retrieves version information about the node and the protocols
  // it implements.
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);
}
