syntax = "proto3";
package tendermint.store;

message BlockStoreState {
  int64 base   = 1;
  int64 height = 2;
}
